--- a/Webshop/wwwroot/style.css
+++ b/Webshop/wwwroot/style.css
@@ -1,3 +1,12 @@
+*{
+    margin: 0px;
+}
 body {
     background-color: aliceblue;
 }
+
+/* .product-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} */
